--- a/week_3_in_class.qmd
+++ b/week_3_in_class.qmd
@@ -75,7 +75,7 @@ Remember: While the "pivot dance" might seem abstract at first, it's a powerful 
 Watch this video lecture to review the concepts from class 3:
 
 ::: {.column-page}
-{{< video https://youtu.be/XXXXX>}}
+{{< video https://youtu.be/eXbjwkABbi0>}}
 :::
 
 ## Setup
@@ -822,7 +822,7 @@ sector_evolution <- get_gcdf3_dataset() |>
     .groups = "drop"
   )
 
-major_sectors
+sector_evolution
 
 # Calculate moving averages to smooth volatility
 sector_trends <- sector_evolution |>
